model1/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model1
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: model1
            port:
              number: 5000
        path: /
        pathType: Prefix
